fix(microsite-qa): fix video block image sizing on tablet

--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -142,7 +142,6 @@ main .section.video-promo-wrapper > div.video-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
   }
 
   /* Section - Video */
